<resources>
    <string name="app_name" translatable="false">Online Playlists</string>

    <!-- Settings menu -->
    <string name="video_finished">After playing video</string>
    <string name="do_nothing">Do nothing</string>
    <string name="replay">Replay</string>
    <string name="play_next_video">Play next video</string>
    <string name="shuffle">Shuffle</string>
    <string name="music_mode">Music mode</string>
    <string name="music_buttons">Music buttons</string>
    <string name="rewind_forward">Rewind and forward</string>
    <string name="previous_next">Previous and next</string>
    <string name="auto_shut_down">Auto shut down</string>
    <string name="auto_shut_down_disable">Disable</string>
    <string name="auto_shut_down_10">After 10 minutes</string>
    <string name="auto_shut_down_30">After 30 minutes</string>
    <string name="auto_shut_down_60">After 60 minutes</string>
    <string name="auto_shut_down_custom">Custom</string>
    <string name="about">About</string>

    <!-- Playlist and video options -->
    <string name="insert_above">Insert above</string>
    <string name="insert_below">Insert below</string>
    <string name="move">Move</string>
    <string name="paste">Paste</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="open_in_youtube">Open in YouTube</string>
    <string name="share">Share</string>

    <!-- Playlist alert dialog -->
    <string name="add_playlist">Add playlist</string>
    <string name="edit_playlist">Edit playlist</string>
    <string name="title">Title</string>
    <string name="default_title">My playlist</string>
    <string name="icon">Icon</string>

    <!-- Video alert dialog -->
    <string name="add_video">Add video</string>
    <string name="url_id_search">Enter ID or URL, or search</string>

    <!-- Delete alert dialog -->
    <string name="delete_video_alert">Are you sure you want to delete this video?</string>
    <string name="delete_playlist_alert">Are you sure you want to delete this playlist?</string>

    <!-- Dialog buttons-->
    <string name="dialog_button_add">Add</string>
    <string name="dialog_button_apply">Apply</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_delete">Delete</string>
    <string name="dialog_button_no">No</string>

    <!-- Toast messages -->
    <string name="cut_to_clipboard">Video was cut to paste.</string>
    <string name="copy_to_clipboard">Video was copied to paste.</string>
    <string name="player_not_ready">The player is not ready. Please try again later.</string>
    <string name="pasted">Video pasted.</string>
    <string name="import_success">Playlist imported.</string>
    <string name="import_fail">Playlist import failed.</string>
    <string name="music_start_point_set">Music start point has been set.</string>
    <string name="timer_disabled">Timer disabled.</string>
    <string name="timer_set">Player will be shut down in %d minutes.</string>
    <string name="grant_permission">Playlists can not be imported without storage permission.</string>

    <!-- No playlists/videos -->
    <string name="no_playlists">There are no playlists.\n\nTap the \"+\" button\nto add a playlist.</string>
    <string name="no_videos">The playlist is empty.\n\nTap the \"+\" button\nto add a video.</string>

    <!-- Misc -->
    <string name="select_all">Select all</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="merge">Merge</string>
    <string name="sort_playlists">Sort playlists</string>
    <string name="sort_videos">Sort videos</string>
    <string name="multi_choose">%d items selected</string>
    <string name="multi_remove_title">Remove multiple items</string>
    <string name="multi_remove_prompt">Remove %d items?</string>
    <string name="removed">Remove</string>
    <string name="merge_title">Merge</string>
    <string name="merge_message">Merge %d playlists?</string>
    <string name="dialog_button_merge">Merge</string>
    <string name="merge_success">Merged in playlist \"%s\".</string>
    <string name="choose_more_than_one">Please choose at least two playlists.</string>
    <string name="auto_shut_down_title">Auto shut down</string>
    <string name="after_minutes">After %d minutes</string>
    <string name="dialog_button_start">Start</string>
    <string name="moved">Moved.</string>
    <string name="copied">Copied.</string>
    <string name="no_playlist_found">All playlists contain this video.</string>
    <string name="previous">Previous</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="next">Next</string>
    <string name="forward">Forward</string>
    <string name="stop">Stop</string>
    <string name="already_added">This video has already been added.</string>
    <string name="speed">Speed:</string>

</resources>