<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/addToTop"
            android:title="@string/insert_above"></item>
        <item
            android:id="@+id/addToBottom"
            android:title="@string/insert_below" />
    </group>
    <group>
        <item
            android:id="@+id/move"
            android:title="@string/move" />
        <item
            android:id="@+id/cut"
            android:title="@string/cut" />
        <item
            android:id="@+id/copy"
            android:title="@string/copy" />
        <item
            android:id="@+id/openInYouTube"
            android:title="@string/open_in_youtube" />
        <item
            android:id="@+id/delete"
            android:title="@string/delete" />
    </group>
</menu>