<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="8dp">

    <EditText
        android:id="@+id/editUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/dark_grey"
        android:ems="10"
        android:hint="@string/url_id_search"
        android:imeOptions="actionGo"
        android:inputType="text"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/very_dark_grey"
        android:textSize="14sp" />

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_marginBottom="8dp"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/webBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@drawable/ripple_on_very_dark_grey"
            android:padding="8dp"
            android:visibility="visible"
            app:srcCompat="@drawable/baseline_arrow_back_24" />

        <ImageView
            android:id="@+id/webRefreshButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@drawable/ripple_on_very_dark_grey"
            android:padding="8dp"
            android:visibility="visible"
            app:srcCompat="@drawable/baseline_refresh_24" />

        <ImageView
            android:id="@+id/webForwardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@drawable/ripple_on_very_dark_grey"
            android:padding="8dp"
            android:visibility="visible"
            app:srcCompat="@drawable/baseline_arrow_forward_24" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/addVideoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/dialog_button_add"
            android:visibility="invisible"
            app:backgroundTint="@color/soft_red"
            app:icon="@drawable/baseline_add_24" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/dialog_button_cancel" />
    </LinearLayout>

</LinearLayout>