<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/title"
            android:textColor="@color/grey1" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/default_title"
            android:inputType="text"
            android:padding="16dp"
            android:textColor="@color/grey1"
            android:textColorHint="@color/blue_grey" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/icon"
            android:textColor="@color/grey1" />

        <LinearLayout
            android:id="@+id/iconSelector"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/general"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/playlist_icon"
                android:padding="16dp"
                app:srcCompat="@drawable/baseline_featured_play_list_24" />

            <ImageView
                android:id="@+id/favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="16dp"
                app:srcCompat="@drawable/baseline_favorite_24" />

            <ImageView
                android:id="@+id/music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="16dp"
                app:srcCompat="@drawable/baseline_library_music_24" />

            <ImageView
                android:id="@+id/game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="16dp"
                app:srcCompat="@drawable/baseline_videogame_asset_24" />

            <ImageView
                android:id="@+id/movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="16dp"
                app:srcCompat="@drawable/baseline_movie_creation_24" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="YouTube oynatma listesi" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="ID ya da URL girin"
            android:inputType="text"
            android:padding="16dp"
            android:textColor="@color/grey1"
            android:textColorHint="@color/blue_grey"
            android:visibility="gone" />

    </LinearLayout>

</ScrollView>